# CG_OpenGL

./: .gitignore  README.md
CG_Lab2/: CMakeLists.txt
CG_Lab2/include/glad/: glad.h
CG_Lab2/res/: Earth.shader  Sun.shader  shader1.shader
CG_Lab2/src/: IndexBuffer.cpp  IndexBuffer.h  Shader.h  Sphere.cpp  Sphere.h  VertexArray.cpp  VertexArray.h  main.cpp
CG_Lab3/: CMakeLists.txt
CG_Lab3/res/: Sun.shader
CG_Lab3/src/: ElementBuffer.cpp  ElementBuffer.h  ErrorChecker.h  Shader.cpp  Shader.h  Shader_.h  Sphere.cpp  Sphere.h  VertexBuffer.cpp  VertexBuffer.h  glad.c  main.cpp
